Add workaround for antigravity